--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
-    "expo": "~50.0.2",
+    "expo": "^50.0.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
