--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "expo": "~50.0.2",
+    "expo-router": "^3.4.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
