--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
