--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo/metro-runtime": "^3.1.1",
     "expo": "^50.0.2",
     "expo-constants": "~15.4.5",
+    "expo-firebase": "^0.0.0-alpha.0",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
