--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@howljs/calendar-kit": "^1.13.2",
+    "@shopify/flash-list": "1.6.3",
+    "@types/react": "~18.2.45",
     "expo": "^50.0.2",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
@@ -19,10 +22,14 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendar-timetable": "^1.0.6",
     "react-native-calendars": "^1.1303.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
