--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendar-timetable": "^1.0.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-reanimated": "~3.6.0",
