--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
-    "expo": "^50.0.2",
+    "expo": "^49.0.22",
     "expo-constants": "~15.4.5",
     "expo-firebase": "^0.0.0-alpha.0",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.4",
+    "expo-router": "^1.5.3",
     "expo-status-bar": "~1.11.1",
+    "firebase": "10.7.1",
     "react": "18.2.0",
+    "react-clock": "^4.6.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-calendars": "^1.1303.0",
@@ -27,8 +29,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "update": "^0.7.4",
-    "firebase": "10.7.1"
+    "update": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
