--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -29,8 +30,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "update": "^0.7.4",
-    "firebase": "10.7.1"
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
