--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
-    "@howljs/calendar-kit": "^1.13.2",
     "@shopify/flash-list": "1.6.3",
     "@types/react": "~18.2.45",
     "expo": "^50.0.2",
@@ -19,6 +18,7 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.4",
     "expo-status-bar": "~1.11.1",
+    "firebase": "10.7.1",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
@@ -30,10 +30,9 @@
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
-    "update": "^0.7.4",
-    "firebase": "10.7.1"
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
