--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-router": "~3.4.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
@@ -30,7 +31,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "update": "^0.7.4"
+    "update": "^0.7.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
