--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-events-calendar": "^1.0.8",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
